fixed header alignment.adicionarAapostadores pages kinda concluded. header title alignment fixed. Header render submenu button partially working

--- a/src/app/(pages)/(apostadores)/adicionarApostador/adicionarApostador.module.css
+++ b/src/app/(pages)/(apostadores)/adicionarApostador/adicionarApostador.module.css
@@ -39,7 +39,7 @@
   margin-top: -10px;
   background-color: var(--color-dark-light);
   color: var(--color-light-light);
-  width: 200px;
+  width: 250px;
 }
 
 .input::-webkit-calendar-picker-indicator {
